--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,6 +143,33 @@ body {
 	line-height: 1;
 }
 
+.copy-btn {
+	position: absolute;
+	top: 10px;
+	right: 20px;
+	color: #fff;
+	font-weight: bold;
+	background-color: #ef5350;
+	text-transform: uppercase;
+}
+
+.copy-btn--copied:after {
+	position: absolute;
+    bottom: -35px;
+    left: 0;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 5px;
+    background: rgba(0,0,0,.5);
+    content: 'Copied';
+    transition: .3s
+}
+
+.copy-btn:hover {
+	background-color: #ff867c;
+}
+
 .sidebar {
     background-color: #f2f2f2;
 }
@@ -166,22 +193,35 @@ body {
 .sidebar__buttons {
     position: sticky;
     top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     margin-top: 20px;
 }
 
 .sidebar__btn {
+	--btn-color: #ddd;
     display: block;
-    color: #fff;
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
-    border: 3px solid transparent;
+    background-color: var(--btn-color);
+    border: 3px solid var(--btn-color);
+    width: calc(50% - 10px);
 }
 
 .sidebar__btn--result {
 	width: 100%;
-    background-color: #003c8f;
-    border-color: #003c8f;
+	color: #fff;
+    --btn-color: #003c8f;
+}
+
+.sidebar__btn--save {
+	--btn-color: #1de9b6;
+}
+
+.sidebar__btn--clear {
+	--btn-color: #fbc02d;
 }
 
 .sidebar__btn:hover {
@@ -217,7 +257,7 @@ body {
 	left: -40px;
 	width: 30px;
 	height: 30px;
-	background: url('images/pencil.svg') no-repeat top center / cover;
+	background: url('../images/pencil.svg') no-repeat top center / cover;
 	transform: translateY(-50%);
 }
 
@@ -315,81 +355,19 @@ select:focus {
 	gap: 10px;
 }
 
-/* actors */
+/* inputs-line */
 
-.actors {
+.multiple-lines {
 	position: relative;
 }
 
-.actor {
+.inputs-line {
 	display: flex;
 	gap: 20px;
 }
 
-.actor input {
+.inputs-line input {
 	width: 210px;
-}
-
-.add-actor-line {
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	color: #fff;
-	background-color: #006db7;
-}
-
-.add-actor-line:hover {
-	box-shadow: 0 0 0 3px rgba(114, 184, 231, .5);
-}
-
-.awards-header {
-	position: relative;
-	display: inline-block;
-}
-
-.awards-header label {
-	cursor: pointer;
-}
-
-.awards-header label:before {
-	content: '';
-	position: absolute;
-	top: 50%;
-	left: -30px;
-	width: 20px;
-	height: 20px;
-	transform: translateY(-50%);
-}
-
-.awards-header input:checked + label {
-	box-shadow: none;
-}
-
-.awards-header input:checked + label:before {
-	background: url('/src/images/checkbox-green.svg');
-}
-
-.awards {
-	display: none;
-	margin-top: 20px;
-}
-
-.award label {
-	width: 150px;
-	text-align: center;
-	background-color: #f2f2f2;
-	padding: 10px 0;
-	margin-right: 10px;
-	cursor: pointer;
-}
-
-.award__nominations {
-	display: none;
-	margin-top: 10px;
-}
-
-.award__nominations label {
-	margin-top: 10px;
 }
 
 /* series */
@@ -426,6 +404,18 @@ select:focus {
 	box-shadow: 0 0 0 2px #777;
 }
 
+.add-line-btn {
+	position: absolute;
+	bottom: 0;
+	left: 460px;
+	color: #fff;
+	background-color: #006db7;
+}
+
+.add-line-btn:hover {
+	box-shadow: 0 0 0 3px rgba(114, 184, 231, .5);
+}
+
 /* modal */
 
 .modal {
@@ -441,6 +431,8 @@ select:focus {
 }
 
 .modal__overlay {
+	display: flex;
+	justify-content: flex-end;
 	background-color: rgba(0,0,0,.5);
 	width: 100%;
 	height: 100%;
@@ -448,20 +440,30 @@ select:focus {
 }
 
 .modal__content {
+	position: relative;
 	overflow: auto;
 	box-sizing: border-box;
 	background-color: #fff;
 	height: 100vh;
 	width: 40%;
 	padding: 20px;
-	transform: translateX(-100%);
+	transform: translateX(100%);
 	transition: .3s;
 	cursor: auto;
 }
 
 .modal__json {
+	color: #000051;
 	font-family: monospace;
 	margin-top: 20px;
+}
+
+.modal__json .property {
+	color: #b61827;
+}
+
+.modal__json .symbol {
+	color: #000;
 }
 
 .modal__header {
