--- a/src/styles/parts/global.css
+++ b/src/styles/parts/global.css
@@ -24,3 +24,28 @@ body {
 	font-weight: bold;
 	font-size: 1.1rem;
 }
+
+@media (max-width: 850px) {
+	.main {
+		padding: 40px 60px;
+		width: 60%;
+	}
+}
+
+@media (max-width: 650px) {
+	.wrapper {
+		flex-direction: column-reverse;
+		position: relative;
+		padding-bottom: 50px;
+	}
+	.main {
+		width: 100%;
+		margin-bottom: 100px;
+	}
+}
+
+@media (max-width: 500px) {
+	.main {
+		padding: 40px;
+	}
+}
