--- a/src/styles/parts/multiple-lines.css
+++ b/src/styles/parts/multiple-lines.css
@@ -10,3 +10,25 @@
 .inputs-line input {
 	width: 210px;
 }
+
+@media (max-width: 910px) {
+	.inputs-line {
+		flex-direction: column;
+		gap: 10px;
+		background: #f2f2f2;
+		padding: 10px;
+		border-radius: 10px;
+	}
+	.inputs-line input {
+		background-color: #fff;
+	}
+}
+@media (max-width: 650px) {
+	.multiple-lines {
+		flex-direction: column;
+		padding-bottom: 60px;
+	}
+	.inputs-line {
+		width: 100%;
+	}
+}
