--- a/src/styles/parts/sidebar.css
+++ b/src/styles/parts/sidebar.css
@@ -58,3 +58,50 @@
     color: #000;
     background-color: transparent;
 }
+
+@media (max-width: 950px) {
+    .sidebar__row,
+	.sidebar__buttons {
+		flex-direction: column;
+	}
+    .sidebar__btn--save,
+	.sidebar__btn--clear {
+		width: 100%;
+	}   
+}
+
+@media (max-width: 850px) {
+    .sidebar {
+        width: 40%;
+    }
+}
+
+@media (max-width: 650px) {
+    .sidebar {
+        width: 100%;
+    }
+    .sidebar__row {
+		flex-direction: row;
+	}
+	.sidebar__buttons {
+		position: absolute;
+		top: initial;
+		bottom: 0;
+		left: 0;
+		flex-direction: row;
+		justify-content: center;
+		background-color: #f2f2f2;
+		padding: 20px 60px;
+		gap: 20px;
+		width: 100%;
+	}
+	.sidebar__btn--save,
+	.sidebar__btn--clear {
+		width: calc(50% - 10px);
+	}   
+}
+@media (max-width: 500px) {
+    .sidebar__buttons {
+		padding: 10px 40px;
+	}
+}
